--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "start": "npm run build && node build/main/index.js --scripts-prepend-node-path",
     "build": "tsc -p tsconfig.json",
+    "release": "pkg build/main/index.js --out-path=release",
     "fix:lint": "eslint src --ext .ts --fix",
     "test": "run-s build test:*",
     "test:lint": "eslint src --ext .ts",
@@ -62,6 +63,7 @@
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
     "open-cli": "^6.0.1",
+    "pkg": "^5.3.1",
     "prettier": "^2.3.2",
     "standard-version": "^9.0.0",
     "ts-node": "^9.0.0",
@@ -102,5 +104,14 @@
     "exclude": [
       "**/*.spec.js"
     ]
+  },
+  "pkg": {
+    "scripts": "build/**/*.js",
+    "targets": [
+      "node12-linux-arm64",
+      "node12-macos-x64",
+      "node12-win-arm64"
+    ],
+    "outputPath": "release"
   }
 }
